--- a/ryd_share_sky/public/index.html
+++ b/ryd_share_sky/public/index.html
@@ -11,6 +11,8 @@
     -->
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css" integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU" crossorigin="anonymous">
+    <script src='https://api.mapbox.com/mapbox-gl-js/v0.51.0/mapbox-gl.js'></script>
+    <link href='https://api.mapbox.com/mapbox-gl-js/v0.51.0/mapbox-gl.css' rel='stylesheet' />
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
       It will be replaced with the URL of the `public` folder during the build.
@@ -27,6 +29,8 @@
       You need to enable JavaScript to run this app.
     </noscript>
     <div id="root"></div>
+    <!--<div id='map' style='width: 800px; height: 600px;'></div>-->
+    <!--<script src="/js/map.js"></script>-->
     <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
