--- a/ryd_share_sky/public/index.html
+++ b/ryd_share_sky/public/index.html
@@ -30,7 +30,7 @@
     </noscript>
     <div id="root"></div>
     <!--<div id='map' style='width: 800px; height: 600px;'></div>-->
-    <!--<script src="/js/map.js"></script>-->
+    <script src="/js/map.js"></script>
     <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
